--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ langchain-openai==0.2.14
 python-dotenv==1.0.0
 tavily-python
 google-cloud-secret-manager
+langchain-core
+langchain-google-vertexai
